--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,7 @@
 	},
 	"version": "0.1",
 	"permissions": [
+		"storage",
 		"webRequest",
 		"webRequestBlocking",
 		"*://*.google.com/*",
@@ -27,9 +28,20 @@
 	],
 	"background": {
 		"scripts": [
-			"blocker.js"
+			"blocker.js",
+			"video_progress/background.js"
 		]
 	},
+	"content_scripts": [
+		{
+			"matches": [
+				"*://*.youtube.com/*", "*://youtube.com/*"
+			],
+			"js": [
+				"video_progress/content.js"
+			]
+		}
+	],
 	"browser_action": {
 		"default_icon": {
 			"24": "icons/icon_24.png",
