--- a/manifest.json
+++ b/manifest.json
@@ -30,6 +30,14 @@
 			"blocker.js"
 		]
 	},
+	"content_scripts": [
+		{
+			"matches": ["*://*.youtube.com/*"],
+			"js": ["pagead-blocker.js"],
+			"css": ["pagead-blocker.css"],
+			"run_at": "document_start"
+		}
+	],
 	"browser_action": {
 		"default_icon": {
 			"24": "icons/icon_24.png",
